--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@tanstack/react-query": "^5.28.6",
     "@tiptap/extension-document": "^2.2.4",
     "@tiptap/extension-highlight": "^2.2.4",
     "@tiptap/extension-placeholder": "^2.2.4",
@@ -34,6 +35,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "electron-router-dom": "^1.0.5",
+    "electron-store": "^8.2.0",
     "phosphor-react": "^1.4.1",
     "react-router-dom": "^6.22.3"
   },
